# fingersmoke20

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/aniviza/fingersmoke20/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fs20.cpp  fs20.h  fs20_a.cpp
app/src/main/cpp/include/: Vertex.h  extnotes.h
app/src/main/java/com/aniviza/fingersmoke20/: MainActivity.java
app/src/main/java/com/aniviza/fingersmoke20/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_fullscreen.xml  activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: compute_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
app/src/test/java/com/aniviza/fingersmoke20/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
